[project]
name = "property-search-mcp"
version = "0.1.0"
description = "MCP Server to search real estate properties"
readme = "README.md"
requires-python = ">=3.13"
authors = [{ name = "neil-ac" }]
keywords = ["mcp", "llm", "real estate", "python"]
dependencies = [
    "black>=25.1.0",
    "fastmcp>=0.7.0",
    "httpx>=0.27.0",
]
